tests/compile-fail/Rule_8_11.rs
pub const arr: [i32] = []; //~ ERROR the size for value values of type `[i32]` cannot be known at compilation time
                           //~^ ERROR mismatched types

fn main() {}
